--- a/Hamoye1.ipynb
+++ b/Hamoye1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Hamoye1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQmsoF1p2C3ToW6Ya6pzkE",
+      "authorship_tag": "ABX9TyNqY+jJEBOV4ey1ZFA/yYJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,6 +276,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Question 12"
+      ],
+      "metadata": {
+        "id": "SRzklM61RAMg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data.describe()"
@@ -514,6 +523,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Question 13"
+      ],
+      "metadata": {
+        "id": "t56B4zQERKfP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data[\"Y2016\"].isnull().sum()"
@@ -540,6 +558,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "V9IKZs8HRw7C"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data[\"Y2016\"].isnull().sum() / data.shape[0]"
@@ -564,6 +591,15 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 14"
+      ],
+      "metadata": {
+        "id": "r8gcZ5ppR147"
+      }
     },
     {
       "cell_type": "code",
@@ -802,6 +838,24 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "hpz0T2orTKm9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 15"
+      ],
+      "metadata": {
+        "id": "FS3IsCqtR9ii"
+      }
     },
     {
       "cell_type": "code",
@@ -1112,6 +1166,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Question 17 & 18"
+      ],
+      "metadata": {
+        "id": "zRoYzxv2SDCp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data[\"Element\"].value_counts()"
@@ -1156,6 +1219,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Question 20"
+      ],
+      "metadata": {
+        "id": "OOPgVnQGSU8-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "len(data[\"Area\"].value_counts())"
@@ -1180,6 +1252,15 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 5"
+      ],
+      "metadata": {
+        "id": "LFq1HbSkSssT"
+      }
     },
     {
       "cell_type": "code",
@@ -1212,6 +1293,15 @@
           "execution_count": 23
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 6"
+      ],
+      "metadata": {
+        "id": "y0q3ffyPSypg"
+      }
     },
     {
       "cell_type": "code",
